package com.project.homer.controller;

import java.util.ArrayList;

import org.springframework.web.bind.annotation.RestController;

/**
 * ServiceController
 */

@RestController
public class ServiceController {
    private ArrayList<String> cached;


    
}
