package com.project.homer.model;

import lombok.Data;

/**
 * Room
 */
@Data
public class Room {
    
    private String status;
    private String category;
    private double pricePerNight;
    private int number;
}
