package com.project.homer.model;

import lombok.Data;

/**
 * Service
 */

@Data
public class Service {

    private int id;
    private String name;
    private String description;
    private float price;
}
